Fixed bug that would cause alignment issues in create and update tournament pages. Also gave invalid fields a "popping" background color.

--- a/Victorious/WebApplication/Styles/less/Tournament/_Create.less
+++ b/Victorious/WebApplication/Styles/less/Tournament/_Create.less
@@ -2,6 +2,18 @@
     .section {
         li {
             padding: .5em 0em;
+
+            .input-validation-error {
+                background-color: @alert-red;
+
+                option {
+                    color: @white;
+                }
+            }
+
+            .field-validation-error {
+                display: none;
+            }
         }
     }
 }
